feat/prisma-implementation, implementação do orm prisma.

--- a/package.json
+++ b/package.json
@@ -5,12 +5,19 @@
   "author": "Leonardo Adami",
   "license": "MIT",
   "private": false,
+  "type": "module",
+  "scripts": {
+    "dev": "nodemon src/server.js",
+    "lint": "eslint . --ext .js",
+    "format": "prettier-eslint --write 'src/**/*.{js}'"
+  },
   "dependencies": {
     "@prisma/client": "^5.18.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "prisma": "^5.18.0"
+    "prisma": "^5.18.0",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "eslint": "8.52.0",
